fix edhtml links and renamed html folder

--- a/src/website/html/community.html
+++ b/src/website/html/community.html
@@ -13,10 +13,10 @@
 
 <body>
   <ul class="topnav">
-    <li><a class="logo" title="Home" href="/"><img src="../static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a href="/"><img src="../static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
-    <li><a class="active" href="community"><img src="../static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
-    <li class="right"><a href="about"><img src="../static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
+    <li><a class="logo" title="Home" href="./index.html"><img src="../static/res/logoCloudTranslatorSvg.svg"></a></li>
+    <li><a href="./index.html"><img src="../static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
+    <li><a class="active" href="./community.html"><img src="../static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
+    <li class="right"><a href="./about.html"><img src="../static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
   </ul>
 
   <!-- <div class="big-list">
