--- a/src/website/html/about.html
+++ b/src/website/html/about.html
@@ -10,17 +10,17 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
-<link rel="stylesheet" href="../static/css/index.css">
+<link rel="stylesheet" href="./static/css/index.css">
 </link>
-<link rel="stylesheet" href="../static/css/about.css">
+<link rel="stylesheet" href="./static/css/about.css">
 </link>
 
 <body>
   <ul class="topnav">
-    <li><a class="logo" title="Home" href="./index.html"><img src="../static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a href="./index.html"><img src="../static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
-    <li><a href="./community.html"><img src="../static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
-    <li class="right"><a class="active" href="./about.html"><img src="../static/res/information-line.png"
+    <li><a class="logo" title="Home" href="./index.html"><img src="./static/res/logoCloudTranslatorSvg.svg"></a></li>
+    <li><a href="./index.html"><img src="./static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
+    <li><a href="./community.html"><img src="./static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
+    <li class="right"><a class="active" href="./about.html"><img src="./static/res/information-line.png"
           class="navbar-image">&nbsp;About</a></li>
   </ul>
 
@@ -88,6 +88,6 @@
 
 </body>
 
-<script type="module" src="../static/scripts/about.js"></script>
+<script type="module" src="./static/scripts/about.js"></script>
 
 </html>
