--- a/src/website/html/community.html
+++ b/src/website/html/community.html
@@ -8,15 +8,15 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
-<link rel="stylesheet" href="../static/css/index.css"></link>
-<link rel="stylesheet" href="../static/css/community.css"></link>
+<link rel="stylesheet" href="./static/css/index.css"></link>
+<link rel="stylesheet" href="./static/css/community.css"></link>
 
 <body>
   <ul class="topnav">
-    <li><a class="logo" title="Home" href="./index.html"><img src="../static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a href="./index.html"><img src="../static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
-    <li><a class="active" href="./community.html"><img src="../static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
-    <li class="right"><a href="./about.html"><img src="../static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
+    <li><a class="logo" title="Home" href="./index.html"><img src="./static/res/logoCloudTranslatorSvg.svg"></a></li>
+    <li><a href="./index.html"><img src="./static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
+    <li><a class="active" href="./community.html"><img src="./static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
+    <li class="right"><a href="./about.html"><img src="./static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
   </ul>
 
   <!-- <div class="big-list">
@@ -41,8 +41,8 @@
 
   <div class="big-list"></div>
 
-  <button id="get-new-data" class="button"><img src="../static/res/arrow-down-fill.png" class="button-image">
-  <img src="../static/res/arrow-down-fill-hover.png" class="button-hover-image">
+  <button id="get-new-data" class="button"><img src="./static/res/arrow-down-fill.png" class="button-image">
+  <img src="./static/res/arrow-down-fill-hover.png" class="button-hover-image">
   </button>
 
   <footer id="footer">
