--- a/src/website/community.html
+++ b/src/website/community.html
@@ -57,5 +57,5 @@
 
 </body>
 
-<script type="module" src="{{url_for('static', filename='scripts/community.js')}}"></script>
+<script type="module" src="./static/scripts/community.js"></script>
 </html>
