feat(website) add ec2 to translate

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -35,7 +35,8 @@
     <p class="selects_line">
 
       <select id="from" name="from" class="from" data-placeholder="Choose a Language...">
-        <!-- populated by index.js -->
+        <option value="en">English</option>
+        <option selected value="it">Italian</option>
       </select>
 
       <button type="button" name="invert" id="invert" class="button"><img src="./static/res/arrow-left-right-fill.png" class="button-image">
@@ -43,7 +44,8 @@
       </button>
 
       <select id="to" name="to" class="to" data-placeholder="Choose a Language...">
-        <!-- populated by index.js -->
+        <option selected value="en">English</option>
+        <option value="it">Italian</option>
       </select>
     </p>
 
